--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -24,7 +24,9 @@
         <ul class="navbar-nav">
             <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
                 <h1 class="welcome-text">
-                    <%= lingua.welcome%>, <span class="text-black fw-bold"><%- user.personalInfo.firstName%></span>
+                    <%# lingua.welcome%>
+                     <span class="text-black fw-bold"><%- user.personalInfo.firstName%> <%- user.personalInfo.lastName%></span>
+                     <small class="text-small text-uppercase"><%- user.role%></small>
                 </h1>
 
                 <% if (messages.error) { %>
