--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -216,7 +216,7 @@
             type: "GET",
             contentType: "application/json"
         }).done(function (result) {
-            console.log('Current Location: ' + result)
+            // console.log('Current Location: ' + result)
             if (result)
                 $('#locationDropdown').removeClass('d-none').val(result);
             else
