Change icons and optimize Services table.

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -65,7 +65,9 @@
         <% if([roles.ADMIN, roles.MANAGER, roles.CASHIER].includes(user.role)) { %>
         <li class="nav-item">
             <a class="nav-link" href="/validateMembership">
-                <i class="fas fa-warehouse menu-icon"></i>
+                <!-- <i class="fas fa-warehouse menu-icon"></i> -->
+                <i class="fas fa-video menu-icon"></i>
+
                 <span class="menu-title"><%= lingua.membership.validate%></span>
             </a>
         </li>
