--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -36002,6 +36002,21 @@ label.required:after {
     border: none;
     cursor: pointer;
 }
+
 .nav-dropdown:focus {
     box-shadow: none;
+}
+
+#notifications-target {
+    width: 20px;
+    position: fixed;
+    right: 0;
+    top: 0px;
+    height: 10px;
+    border-style: solid;
+    z-index: 9999;
+}
+
+.position-absolute {
+    position: absolute;
 }
