Add NODE_ENV to locals. Remove location on the socket validation. Add if condition for only add admin/manager/cashier users to the agent room. Fix validateLocation function. Add new function middleware to validate if the user need to auto select currentLocation.
Fix js on view.ejs location.

Add toasts for notifications.

Add development dropdown on navbar.

--- a/views/location/view.ejs
+++ b/views/location/view.ejs
@@ -165,7 +165,7 @@
 
     <!-- Alerts Code -->
     <%- include('../partials/alerts.ejs', {message, alertType}); %>
-    <script src="./js/helper-functions.js"></script>
+    <script src="../js/helper-functions.js"></script>
 
     <script>
         $(document).ready(function () {
