--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -36008,15 +36008,50 @@ label.required:after {
 }
 
 #notifications-target {
-    width: 20px;
-    position: fixed;
+    /* width: 20px; */
+    width: 400px;
+
+    position: absolute;
     right: 0;
-    top: 0px;
-    height: 10px;
+    top: 100px;
+    height: 150px;
     border-style: solid;
-    z-index: 9999;
+    /* z-index: 9999; */
 }
 
 .position-absolute {
     position: absolute;
 }
+
+
+.colored-toast.swal2-icon-success {
+    background-color: #a5dc86 !important;
+  }
+  
+  .colored-toast.swal2-icon-error {
+    background-color: #f27474 !important;
+  }
+  
+  .colored-toast.swal2-icon-warning {
+    background-color: #f8bb86 !important;
+  }
+  
+  .colored-toast.swal2-icon-info {
+    background-color: #3fc3ee !important;
+  }
+  
+  .colored-toast.swal2-icon-question {
+    background-color: #87adbd !important;
+  }
+  
+  .colored-toast .swal2-title {
+    color: white;
+  }
+  
+  .colored-toast .swal2-close {
+    color: white;
+  }
+  
+  .colored-toast .swal2-html-container {
+    color: white;
+  }
