Create My Memberships route and remove subscriptions from dashboard. My Memberships is the new customer dashboard. Fix register.ejs logo.
Optimize subscriptions layout. Add DataTable/

--- a/views/dashboards/customer.ejs
+++ b/views/dashboards/customer.ejs
@@ -50,11 +50,11 @@
                   </ul>
 
                 </div>
-                <div class="tab-content tab-content-basic">
+                <!-- <div class="tab-content tab-content-basic">
                   <div class="tab-pane show active" id="plan" role="tabpanel" aria-labelledby="plan">
-                    <%- include('../partials/subscriptions/subscriptions.ejs' , {user, hasSubscription : user?.hasSubscription, prices, subscriptions}); %>
+                    <%# include('../partials/subscriptions/subscriptions.ejs' , {user, hasSubscription : user?.hasSubscription, prices, subscriptions}); %>
                   </div>
-                </div>
+                </div> -->
 
               </div>
             </div>
@@ -83,15 +83,12 @@
   <script src="./js/off-canvas.js"></script>
   <script src="./js/hoverable-collapse.js"></script>
   <script src="./js/template.js"></script>
-  <script src="./js/settings.js"></script>
-  <script src="./js/todolist.js"></script>
   <!-- endinject -->
   <!-- Custom js for this page-->
   </script>
 
   <script src="./js/jquery.cookie.js" type="text/javascript"></script>
   <script src="./js/dashboard.js"></script>
-  <script src="./js/Chart.roundedBarCharts.js"></script>
   <!-- End custom js for this page-->
 
   <!-- Alerts Code -->
